styles/main.css
:root {
  --highlighter: rgb(223, 83, 58);
}

html,
button {
  font-size: 16px;
  font-family: 'Montserrat', Helvetica, sans-serif;
}

body {
  font-weight: 425;
  text-align: center;
  background-color: rgb(217, 191, 239);
}

main {
  background-color: rgba(245, 243, 243, 0.693);
  width: 80%;
  border-radius: 20pt;
  padding: 5px 10px 5px 10px;
}

li {
  border-style: solid;
  border-radius: 5pt;
  margin: 5px;
  padding: 4px;
  border-color: rgb(85, 85, 85);
}

h4 {
  justify-self: center;
  width: 50%;
  padding-top: 30px;
  border-top: solid;
  margin-bottom: 5px;
}

h1 {
  color: #027db6d7;
  font-size: 3rem;
}

h2 {
  font-size: 2rem;
  margin-bottom: 10px;
}

span {
  color: var(--highlighter) !important;
}

ul {
  list-style-type: upper-roman;
  padding: 0;
}

h3 {
  margin-top: 10px;
}

figcaption {
  font-size: 0.8rem;
}

/* Containers */

.container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  margin: 0px auto;
  align-items: center;
}

.flex-container-vertical {
  display: flex;
  flex-direction: column;
  height: 220px;
  align-items: center;
  justify-content: center;
}

.flex-container-horizontal {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.flex-container-nav {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-top: 20px;
  width: 100%;
  flex-wrap: nowrap;
}

/* Nav */

.nav {
  border-radius: 15pt;
  border-style: none;
  background-color: rgba(2, 182, 131, 0.734);
  color: rgb(240, 240, 240);
  padding: 10px 15px 10px 15px;
  font-weight: 500;
  margin: 15px 20px 10px 20px;
  cursor: pointer;
}

.disabledButton {
  background-color: rgb(156, 156, 156);
  cursor: not-allowed;
}

#home {
  display: flex;
  border-radius: 15pt;
  border-style: none;
  background-color: rgba(149, 2, 182, 0.404);
  color: rgb(240, 240, 240);
  text-decoration: none !important ;
  padding: 10px 15px 10px 15px;
  margin-bottom: 5px;
  font-weight: 450;
  cursor: pointer;
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

/* Home button keeps inherting underline, unsure why the next & prev buttons aren't doing this */
#homeAnchor {
  text-decoration: none;
}

/* Misc Selectors */

#profile {
  width: 80%;
  height: 80%;
  object-position: center;
  max-height: 150pt;
}

#blog-list {
  list-style-position: inside;
}

.exampleImage {
  width: 95%;
}

.quote {
  font-style: italic;
}
/* Creates the "dive" effect of the home page title */
#dive {
  display: inline-block;
  position: relative;
  transform: rotate(16deg);
  top: 14px;
}

/* Used for the fixed position example in the CSS blog */
#fixDiv {
  position: fixed;
  width: 120px;
  height: 30px;
  background-color: rgb(83, 0, 128);
  bottom: 0;
  right: 0;
  color: rgb(83, 0, 128);
  border-top-left-radius: 5pt;
  font-size: 10pt;
  padding-top: 15px;
}

/* Some tricks to get the banner image displayed full width of the container */

#snow-img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  max-height: 150pt;
}

#identity-main {
  padding: 0;
}

#identity-main p {
  padding: 5px 10px 5px 10px;
}

/* Handling different screen sizes */
@media (max-width: 600px) {
  html {
    font-size: 12px;
  }
  main {
    width: fit-content;
  }
  body {
    margin: 0;
  }
}

@media (min-width: 1440px) {
  main {
    max-width: 40%;
  }
}

/* Can switch the nav to a column, but doesn't seem needed now that the container will fit content */
/* @media (max-width: 550px) {
  .flex-container-nav {
    flex-wrap: wrap;
    justify-content: center;
  }
  #previous {
    order: 1;
  }
  #next {
    order: 2;
  }
  h1 {
    order: 3;
  }
} */

